# gd32-cmake-example

./: .gitignore  .gitmodules  CMakeLists.txt  GD32F405RGTx_FLASH.ld  gd32f407ve.ld
Examples/GPIO/Running_led/: main.c
Examples/USB/USB_Device/cdc_acm/: CMakeLists.txt
Examples/USB/USB_Device/msc_cdrom/: CMakeLists.txt
Examples/USB/USB_Device/msc_udisk/: CMakeLists.txt
Examples/USB/USB_Device/msc_udisk/src/: system_gd32f4xx.c
Firmware/CMSIS/: CMakeLists.txt
Firmware/CMSIS/GD/GD32F4xx/Source/GNU/: startup_gd32f405.cpp
Utilities/: gd32f450i_eval.h  gd32f450z_eval.h
cmake/: example_add_libs.cmake
